Fix padding on mobile devices

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -7,11 +7,11 @@
         background-position: center top;
         background-size: cover;
         margin: 60px 0 0 0;
-        padding: 50px 0 10px 0;
+        padding: 50px 10px 10px 10px;
     }
 
     .copy-box {
-        padding: 15px 0 0 0;
+        padding: 15px 10px 10px 10px;
         background-color: $veryBlackColor;
         height: 100%;
         p {
